# streaming_sfm

./: README.md  TODO.txt  agent_simulstream.py  hyp_utils.py  pac_experiment_manifest.yaml  pac_experiment_manifest_fast_baseline.yaml  parakeet.py  prova.py  pyproject.toml  run_acl6060_simulstream.sh  run_pac_experiments.sh  score_acl6060_metrics.sh  set_config.sh  speech_processor.yaml  speech_processor_qwen35_9b_bnb4_slcp.yaml  speech_processor_qwen35_9b_bnb4_smallerW.yaml  speech_processor_qwen35_9b_bnb4_spec.yaml  streaming_model.py  tgt.txt  utils.py  vp.jsonl
scripts/: build_omnisteval_html_report.py  check_resegmented_emissions.py  pac_experiment_report.py  prepare_acl6060_scoring.py  run_pac_experiments.py
src/streaming_sfm/: __init__.py  hyp_utils.py  parakeet.py  streaming_model.py
src/streaming_sfm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/streaming_sfm/aligners/: __init__.py  simalign.py  word_aligner.py
